--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
+### OWN FOLDERS ###
+
+CoverArt/
+
 ### IntelliJ IDEA ###
 .idea/modules.xml
 .idea/jarRepositories.xml
